# SystemIntegrationOpgaver

./: .gitignore
01_Assignment/: main.py
01_Assignment/File_Formats/: Egg_Story.txt  Equipment.yaml  Story.doc  XML_Element.xml  test.csv  test.json  test.yaml
01_Data_Parse/: Main.java  main.py
01_Data_Parse/File_Formats/: Equipment.yaml  Food.json
03._Modules/html_with_modules/: index.html  index.js  myModules.js
03._Modules/node_es_modules/: index.js  myModules.js
03._Modules/python_modules/: main.py
03._Modules/python_modules/my_module/: file_one.py
04._Encoding_Decoding/python/: main.py
04a_SSE/Client/: index.html  index.js
04a_SSE/Server/: server.js
05._Python_Environments/: main.py
05._Python_Environments/01._virtualenv_Environment/: main.py
05._Python_Environments/02._Pipenv_Environment/: main.py
05a._Expose_and_integrate_with_webhooks/: app.js  package-lock.json  package.json
06._Servers/06a._websocket/: client.js  package-lock.json  server.js
06._Servers/node/: app.js  package-lock.json  package.json
08._Databases/08a._Tool for db docs/: Guide.txt
08._Databases/08b._Database_Migration/: DBMigration.py  Setup.txt
08._Server-To-Server/node/: app.js
08._Server-To-Server/python/: main.py  pyproject.toml
10a._GraphQL/: index.js  notes.txt  package-lock.json  package.json
10a._GraphQL/data/: dbConnectors.js  resolvers.js  schema.js
10b._Payment/: index.html
Encoding_Decoding/node/: index.js
